[HBI-198] fixed text overflow on the profile page (#995)

--- a/lms/static/sass/blocks/_profile-account.scss
+++ b/lms/static/sass/blocks/_profile-account.scss
@@ -35,6 +35,9 @@
 	.wrapper-profile-section-container-one .wrapper-profile-section-one {
 		border: 2px solid $base-color;
 	}
+	.wrapper-profile-section-container-two .u-field-value {
+		word-break: break-all;
+	}
 }
 
 // account page
